Changing drop item mechanic to throw item mechanic

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -254,3 +254,6 @@ ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
 
+
+[CoreRedirects]
++FunctionRedirects=(OldName="/Script/Blackout.IInteractionInterface.Drop",NewName="/Script/Blackout.IInteractionInterface.Throw")
